--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Last Page of the Internet</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: #fff;
-        }
-        .container {
-            max-width: 600px;
-        }
-    </style>
+<meta content="en-gb" http-equiv="Content-Language" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<title>Untitled 1</title>
+<style type="text/css">
+.auto-style1 {
+	font-size: xx-large;
+	font-weight: bold;
+	margin-left: 573px;
+}
+.auto-style2 {
+	margin-left: 616px;
+}
+</style>
 </head>
+
 <body>
-    <div class="container">
-        <h1>Congratulations!</h1>
-        <p>You have reached the last page of the internet.</p>
-        <p>There is nothing more to see. You can go outside now. 🌎</p>
-    </div>
+
+<p>&nbsp;</p>
+<h1 style="width: 1002px">&nbsp;Brewtopia&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+Home&nbsp; |&nbsp; Menu&nbsp; |&nbsp; Store Locator&nbsp; |&nbsp; Contact Us</h1>
+<h2>&nbsp;</h2>
+<p class="auto-style1" style="width: 431px">Find a Coffee Shop Near You</p>
+<ol>
+	<li></li>
+	<h3 class="auto-style2" style="width: 334px">Enter city, Post code, or name</h3>
+</ol>
+
 </body>
+
 </html>
+
