--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 .auto-style1 {
 	font-size: xx-large;
 	font-weight: bold;
-	margin-left: 573px;
+	margin-left: 544px;
 }
 .auto-style2 {
 	margin-left: 616px;
@@ -17,13 +17,13 @@
 </style>
 </head>
 
-<body>
+<body bgcolor="#FFFFFF">
 
 <p>&nbsp;</p>
-<h1 style="width: 978px">&nbsp;Brewtopia&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<h1 style="width: 975px">&nbsp;Brewtopia&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 Home&nbsp; |&nbsp; Menu&nbsp; |&nbsp; Store Locator&nbsp; |&nbsp; Contact Us</h1>
 <h2>&nbsp;</h2>
-<p class="auto-style1" style="width: 431px">Find a Coffee Shop Near You</p>
+<p class="auto-style1" style="width: 419px">Find a Coffee Shop Near You</p>
 <ol>
 	<li></li>
 	<h3 class="auto-style2" style="width: 246px">Enter city, Post code, or name</h3>
@@ -47,8 +47,3 @@ Careers | About us | FAQs | T&amp;Cs</p>
 </body>
 
 </html>
-
-</body>
-
-</html>
-
