--- a/index.html
+++ b/index.html
@@ -51,31 +51,25 @@ body {
 <table width="90%" border="1" align="center">
   <tbody>
     <tr>
-      <td colspan="5">&nbsp;</td>
+      <td height="90" colspan="5"><strong>Brewtopia</strong></td>
     </tr>
     <tr>
-      <td height="38">&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td width="21%" height="38" style="text-align: center"><p>Home</p></td>
+      <td width="20%" style="text-align: center"><p>Menu</p></td>
+      <td width="19%" style="text-align: center"><p>Store</p></td>
+      <td width="22%" style="text-align: center"><p>Contact Us</p></td>
+      <td width="18%">&nbsp;</td>
     </tr>
     <tr>
-      <td height="68" colspan="5">&nbsp;</td>
+      <td height="68" colspan="4" style="font-family: Baskerville, 'Palatino Linotype', Palatino, 'Century Schoolbook L', 'Times New Roman', serif; font-weight: 900;">Find a Coffee Shop Near You </td>
+      <td height="68">&nbsp;</td>
     </tr>
+  </tbody>
+</table>
+<table width="90%" border="1">
+  <tbody>
     <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td height="64">Copyright Brewtopia Design 2025              Careers | About us | FAQs | T&amp;Cs</td>
     </tr>
   </tbody>
 </table>
