--- a/index.html
+++ b/index.html
@@ -1,77 +1,66 @@
-<table width="90%" border="1">
-  <tbody>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-  </tbody>
-</table>
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-<style type="text/css">
-body {
-    background-color: #E7E0E0;
-}
-</style>
+  <meta charset="utf-8">
+  <title>Brewtopia</title>
+  <style>
+    .map-container {
+      width: 90%;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 15px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background-color: #f9f9f9;
+    }
+
+    iframe {
+      width: 100%;
+      height: 450px;
+      border: none;
+      border-radius: 8px;
+    }
+
+    table {
+      width: 90%;
+      margin: auto;
+      border-collapse: collapse;
+    }
+
+    td {
+      padding: 10px;
+      text-align: center;
+    }
+
+    td img {
+      width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 
-<body bgcolor="#A87879">
-&nbsp;
-<table width="90%" border="1" align="center">
-  <tbody>
-    <tr>
-      <td height="90" colspan="5"><strong>Brewtopia</strong></td>
-    </tr>
-    <tr>
-      <td width="21%" height="38" style="text-align: center"><p>Home</p></td>
-      <td width="20%" style="text-align: center"><p>Menu</p></td>
-      <td width="19%" style="text-align: center"><p>Store</p></td>
-      <td width="22%" style="text-align: center"><p>Contact Us</p></td>
-      <td width="18%">&nbsp;</td>
-    </tr>
-    <tr>
-      <td height="68" colspan="4" style="font-family: Baskerville, 'Palatino Linotype', Palatino, 'Century Schoolbook L', 'Times New Roman', serif; font-weight: 900;">Find a Coffee Shop Near You </td>
-      <td height="68">&nbsp;</td>
-    </tr>
-  </tbody>
-</table>
-<table width="90%" border="1">
-  <tbody>
-    <tr>
-      <td height="64">Copyright Brewtopia Design 2025              Careers | About us | FAQs | T&amp;Cs</td>
-    </tr>
-  </tbody>
-</table>
+<body>
+  <table border="1">
+    <tbody>
+      <tr>
+        <td colspan="5">
+          <img src="file:///C|/Users/thely/Pictures/Screenshots/Screenshot 2025-04-08 142253.png" alt="Banner">
+        </td>
+      </tr>
+      <tr>
+        <td>Home</td>
+        <td>Menu</td>
+        <td>Store Locator</td>
+        <td>Contact Us</td>
+        <td>&nbsp;</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="map-container">
+    <h2 style="text-align: center;">Find Us</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 </body>
 </html>
