--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brewtopia</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
     .map-container {
       width: 90%;
       max-width: 800px;
@@ -37,6 +47,58 @@
       width: 100%;
       height: auto;
     }
+
+    footer {
+      width: 100%;
+      padding: 20px 0;
+      text-align: center;
+      background-color: #333;
+      color: #fff;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: #ddd;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 768px) {
+      table, td {
+        display: block;
+        width: 100%;
+      }
+
+      td {
+        border-bottom: 1px solid #ccc;
+      }
+
+      .map-container {
+        width: 95%;
+        padding: 10px;
+      }
+
+      iframe {
+        height: 300px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      footer {
+        font-size: 12px;
+      }
+
+      footer a {
+        display: block;
+        margin: 5px 0;
+      }
+    }
   </style>
 </head>
 
@@ -62,5 +124,13 @@
     <h2 style="text-align: center;">Find Us</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
+
+  <footer>
+    &copy; Brewtopia Design 2025 &nbsp; | &nbsp;
+    <a href="#">Careers</a> |
+    <a href="#">About Us</a> |
+    <a href="#">F&A</a> |
+    <a href="#">T&C</a>
+  </footer>
 </body>
 </html>
