--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <tbody>
       <tr>
         <td colspan="5">
-          <img src="smallBanner.png" alt="Banner">
+          <img src="Screenshot 2025-04-08 142253.png" alt="Banner" width="97%" height="263">
         </td>
       </tr>
       <tr>
