--- a/index.html
+++ b/index.html
@@ -106,20 +106,24 @@
   <table border="1">
     <tbody>
       <tr>
-        <td colspan="5">
-          <img src="Screenshot 2025-04-08 142253.png" alt="Banner" width="97%" height="263">
-        </td>
-      </tr>
-      <tr>
-        <td>Home</td>
-        <td>Menu</td>
-        <td>Store Locator</td>
-        <td>Contact Us</td>
-        <td>&nbsp;</td>
+        <td width="13%"><strong>Brewtopia</strong></td>
+        <td width="8%"><strong>Home</strong></td>
+        <td width="14%"><strong>Menu</strong></td>
+        <td width="32%"><strong>Store Locator</strong></td>
+        <td width="23%"><strong>Contact Us</strong></td>
+        <td width="10%"><img src="mag2.png" width="474" height="474" alt=""/></td>
       </tr>
     </tbody>
   </table>
 
+  <table width="200" border="1">
+    <tbody>
+      <tr>
+        <td><strong>Find a Coffee Shop Near You</strong></td>
+      </tr>
+    </tbody>
+  </table>
+  <p>&nbsp;</p>
   <div class="map-container">
     <h2 style="text-align: center;">Find Us</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
