--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brewtopia</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     * {
       box-sizing: border-box;
@@ -38,11 +39,6 @@
       border-collapse: collapse;
     }
 
-    td {
-      padding: 10px;
-      text-align: center;
-    }
-
     td img {
       width: 100%;
       height: auto;
@@ -68,7 +64,6 @@
       text-decoration: underline;
     }
 
-    /* Responsive tweaks */
     @media (max-width: 768px) {
       table, td {
         display: block;
@@ -99,35 +94,42 @@
         margin: 5px 0;
       }
     }
+  .map-container1 {      width: 90%;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 15px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background-color: #f9f9f9;
+}
+.map-container1 {        width: 95%;
+        padding: 10px;
+}
   </style>
 </head>
 
 <body>
-  <table border="1">
+  <table width="81%" height="188" border="1">
     <tbody>
       <tr>
-        <td width="13%"><strong>Brewtopia</strong></td>
-        <td width="8%"><strong>Home</strong></td>
-        <td width="14%"><strong>Menu</strong></td>
-        <td width="32%"><strong>Store Locator</strong></td>
-        <td width="23%"><strong>Contact Us</strong></td>
-        <td width="10%"><img src="mag2.png" width="474" height="474" alt=""/></td>
+        <td width="11%" height="91" class="nav-button"><strong>Brewtopia</strong></td>
+        <td width="6%" class="nav-button"><strong>Home</strong></td>
+        <td width="12%" class="nav-button"><strong>Menu</strong></td>
+        <td width="38%" class="nav-button"><strong>Store Locator</strong></td>
+        <td width="23%" class="nav-button"><strong>Contact Us</strong></td>
+        <td width="10%">&nbsp;</td>
+      </tr>
+      <tr>
+        <td height="91" colspan="6" class="nav-button"><strong>Find a Coffee Shop Near You</strong></td>
       </tr>
     </tbody>
   </table>
 
-  <table width="200" border="1">
-    <tbody>
-      <tr>
-        <td><strong>Find a Coffee Shop Near You</strong></td>
-      </tr>
-    </tbody>
-  </table>
-  <p>&nbsp;</p>
   <div class="map-container">
     <h2 style="text-align: center;">Find Us</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+</div>
 
   <footer>
     &copy; Brewtopia Design 2025 &nbsp; | &nbsp;
@@ -138,3 +140,4 @@
   </footer>
 </body>
 </html>
+
