--- a/pagetwo.html
+++ b/pagetwo.html
@@ -106,14 +106,10 @@
 <table border="1">
     <tbody>
       <tr>
-        <td height="471" colspan="5"><img src="old/Screenshot 2025-04-08 142253.png" width="1015" height="276" alt=""/>
-        </td>
-      </tr>
-      <tr>
-        <td width="18%" height="187">Home</td>
-        <td width="17%">Menu</td>
-        <td width="32%">Store Locator</td>
-        <td width="18%">Contact Us</td>
+        <td width="18%" height="242" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Home</strong></td>
+        <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB">Menu</strong></td>
+        <td width="32%" bgcolor="#5E78F4"><span style="color: #FFFFFF"><strong>Store L</strong></span><strong><span style="color: #FFFFFF">ocator</span></strong></td>
+        <td width="18%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
         <td width="15%"><img src="magnifying-glass-icon.jpg" width="1920" height="1920" alt=""/></td>
       </tr>
     </tbody>
@@ -123,62 +119,63 @@
 <table width="200" border="1">
   <tbody>
     <tr>
-      <td colspan="3">Select Dlivery Option For your Order</td>
+      <td colspan="3"><strong>Select Dlivery Option For your Order</strong></td>
     </tr>
     <tr>
-      <td width="31%"><img src="old/ubereat-logo.png" width="204" height="192" alt=""/></td>
-      <td width="36%"><img src="dliveroo-logo.jpg" width="206" height="191" alt=""/></td>
+      <td width="31%" height="496"><img src="old/ubereat-logo.png" width="71%" height="225" alt=""/></td>
+      <td width="36%"><img src="dliveroo-logo.jpg" width="63%" height="305" alt=""/></td>
       <td width="33%"><img src="just eatlogo.png" width="204" height="192" alt=""/></td>
-    </tr>
-    <tr>
-      <td height="56">&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
     </tr>
   </tbody>
 </table>
-<table width="200" border="1">
+<table width="83%" height="516" border="0">
   <tbody>
     <tr>
-      <td colspan="2">name*</td>
-      <td width="36%">Email*</td>
-      <td width="33%">Phone Number*</td>
+      <td colspan="3"><strong>name*</strong></td>
+      <td colspan="2"><strong>Email*</strong></td>
+      <td colspan="2"><strong>Phone Number*</strong></td>
     </tr>
     <tr>
-      <td width="13%">Jhon</td>
-      <td width="18%">Smith</td>
-      <td>john.smith@gmail</td>
-      <td>&nbsp;</td>
+      <td width="13%" bgcolor="#5E78F4">Jhon</td>
+      <td width="6%" bgcolor="#FFFFFF">&nbsp;</td>
+      <td width="12%" bgcolor="#5E78F4">Smith</td>
+      <td bgcolor="#FFFFFF">l</td>
+      <td bgcolor="#5E78F4">john.smith@gmail</td>
+      <td width="3%">&nbsp;</td>
+      <td width="30%" bgcolor="#5E78F4">+44 01279 123456</td>
     </tr>
     <tr>
-      <td colspan="2">Address*</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td colspan="2">23 someware road</td>
-      <td>Town or City</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td colspan="2">Zip or post code</td>
-      <td>Country</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
+      <td colspan="3"><strong>Address*</strong></td>
       <td colspan="2">&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>Order Total</td>
-      <td>£0.0</td>
-      <td colspan="2">Order Now</td>
-    </tr>
-    <tr>
       <td colspan="2">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3" bgcolor="#5E78F4">23 someware road</td>
+      <td width="6%">&nbsp;</td>
+      <td width="30%" bgcolor="#5E78F4">Town or City</td>
+      <td colspan="2">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3" bgcolor="#5E78F4">Zip or post code</td>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td bgcolor="#5E78F4">Country</td>
+      <td colspan="2">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="3">&nbsp;</td>
+      <td colspan="2">&nbsp;</td>
+      <td colspan="2">&nbsp;</td>
+    </tr>
+    <tr>
+      <td height="86" bgcolor="#5E78F4">Order Total</td>
+      <td colspan="2" bgcolor="#5E78F4"><strong>£.52</strong></td>
+      <td colspan="3">&nbsp;</td>
+      <td bgcolor="#5E78F4">Order Now</td>
+    </tr>
+    <tr>
+      <td height="56" colspan="3">&nbsp;</td>
+      <td colspan="2">&nbsp;</td>
+      <td colspan="2">&nbsp;</td>
     </tr>
   </tbody>
 </table>
