--- a/pagetwo.html
+++ b/pagetwo.html
@@ -106,7 +106,8 @@
 <table border="1">
     <tbody>
       <tr>
-        <td width="18%" height="242" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Home</strong></td>
+        <td width="9%" height="242" bgcolor="#5E78F4" style="color: #FFFFFF"><strong>Brewtopia</strong></td>
+        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Home</strong></td>
         <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB">Menu</strong></td>
         <td width="32%" bgcolor="#5E78F4"><span style="color: #FFFFFF"><strong>Store L</strong></span><strong><span style="color: #FFFFFF">ocator</span></strong></td>
         <td width="18%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
