--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     }
 
     table {
-      width: 90%;
-      margin: auto;
-      border-collapse: collapse;
+    width: 90%;
+    margin: auto;
+    border-collapse: collapse;
+    text-align: center;
+    color: #F9F9F9;
     }
 
     td img {
@@ -113,19 +115,29 @@
   <table width="81%" height="188" border="0">
     <tbody>
       <tr>
-        <td width="11%" height="91" class="nav-button"><strong>Brewtopia</strong></td>
-        <td width="6%" class="nav-button"><strong>Home</strong></td>
-        <td width="12%" class="nav-button"><strong>Menu</strong></td>
-        <td width="38%" class="nav-button"><strong>Store Locator</strong></td>
-        <td width="23%" class="nav-button"><strong>Contact Us</strong></td>
+        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong>Brewtopia</strong></td>
+        <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong>Home</strong></td>
+        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong>Menu</strong></td>
+        <td width="38%" bgcolor="#5E78F4" class="nav-button"><strong>Store Locator</strong></td>
+        <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
         <td width="10%">&nbsp;</td>
       </tr>
       <tr>
-        <td height="91" colspan="6" class="nav-button"><strong>Find a Coffee Shop Near You</strong></td>
+        <td height="91" colspan="6" bgcolor="#FFFFFF" class="nav-button" style="font-size: 36px; color: #000000;">Find a Coffee Shop Near You</td>
       </tr>
     </tbody>
   </table>
 
+  <p>&nbsp;</p>
+  <table width="80%" border="0">
+    <tbody>
+      <tr>
+        <td width="72%" height="78">&nbsp;</td>
+        <td width="28%" bgcolor="#5E78F4" style="color: #000000">Enter City, Postcode or Store Name</td>
+      </tr>
+    </tbody>
+  </table>
+  <p>&nbsp;</p>
   <div class="map-container">
     <h2 style="text-align: center;">Find Us</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -139,5 +151,3 @@
     <a href="#">T&C</a>
   </footer>
 </body>
-</html>
-
