--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
         <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong>Brewtopia</strong></td>
         <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong>Home</strong></td>
         <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong>Menu</strong></td>
-        <td width="38%" bgcolor="#5E78F4" class="nav-button"><strong>Store Locator</strong></td>
+        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong>Store Locator</strong> </td>
+        <td width="19%" bgcolor="#5E78F4" class="nav-button">Order</td>
         <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
         <td width="10%">&nbsp;</td>
       </tr>
       <tr>
-        <td height="91" colspan="6" bgcolor="#FFFFFF" class="nav-button" style="font-size: 36px; color: #000000;">Find a Coffee Shop Near You</td>
+        <td height="91" colspan="7" bgcolor="#FFFFFF" class="nav-button" style="font-size: 36px; color: #000000;">Find a Coffee Shop Near You</td>
       </tr>
     </tbody>
   </table>
@@ -151,3 +152,4 @@
     <a href="#">T&C</a>
   </footer>
 </body>
+</html>
