--- a/pagetwo.html
+++ b/pagetwo.html
@@ -103,21 +103,22 @@
 </head>
 
 <body>
-<table border="1">
+<table border="0">
     <tbody>
       <tr>
         <td width="9%" height="242" bgcolor="#5E78F4" style="color: #FFFFFF"><strong>Brewtopia</strong></td>
         <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Home</strong></td>
         <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB">Menu</strong></td>
-        <td width="32%" bgcolor="#5E78F4"><span style="color: #FFFFFF"><strong>Store L</strong></span><strong><span style="color: #FFFFFF">ocator</span></strong></td>
-        <td width="18%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
+        <td width="32%" bgcolor="#5E78F4"><strong><span style="color: #FFFFFF">Store Locator</span></strong></td>
+        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Order</strong></td>
+        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
         <td width="15%"><img src="magnifying-glass-icon.jpg" width="1920" height="1920" alt=""/></td>
       </tr>
     </tbody>
 </table>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<table width="200" border="1">
+<table width="200" border="0">
   <tbody>
     <tr>
       <td colspan="3"><strong>Select Dlivery Option For your Order</strong></td>
@@ -169,7 +170,7 @@
     </tr>
     <tr>
       <td height="86" bgcolor="#5E78F4">Order Total</td>
-      <td colspan="2" bgcolor="#5E78F4"><strong>£.52</strong></td>
+      <td colspan="2" bgcolor="#5E78F4"><strong>£8.52</strong></td>
       <td colspan="3">&nbsp;</td>
       <td bgcolor="#5E78F4">Order Now</td>
     </tr>
