--- a/menu.html
+++ b/menu.html
@@ -37,8 +37,7 @@
     width: 90%;
     margin: auto;
     border-collapse: collapse;
-    text-align: center;
-    color: #F9F9F9;
+    text-align: left;
     }
 
     td img {
@@ -115,34 +114,73 @@
   <table width="81%" height="188" border="0">
     <tbody>
       <tr>
-        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong>Brewtopia</strong></td>
-        <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong>Home</strong></td>
-        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong>Menu</strong></td>
-        <td width="38%" bgcolor="#5E78F4" class="nav-button"><strong>Store Locator</strong></td>
-        <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
-        <td width="10%">&nbsp;</td>
+        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Brewtopia</strong></td>
+        <td width="13%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFCFC">Home</strong></td>
+        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Menu</strong></td>
+        <td width="14%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFDFD">Store Locator</strong></td>
+        <td width="14%" bgcolor="#5E78F4" class="nav-button" style="text-align: left; color: #FFFFFF;"><strong>Order</strong></td>
+        <td width="26%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Contact Us</strong></td>
+        <td width="10%" bgcolor="#5E78F4">&nbsp;</td>
       </tr>
       <tr>
-        <td height="91" colspan="6" bgcolor="#FFFFFF" class="nav-button" style="font-size: 36px; color: #000000;">Find a Coffee Shop Near You</td>
+        <td height="91" colspan="7" bgcolor="#FBFBFB" class="nav-button"><strong>Order Sumary</strong></td>
       </tr>
     </tbody>
   </table>
-
-  <p>&nbsp;</p>
-  <table width="80%" border="0">
+  <table width="79%" height="405" border="0">
     <tbody>
       <tr>
-        <td width="72%" height="78">&nbsp;</td>
-        <td width="28%" bgcolor="#5E78F4" style="color: #000000">Enter City, Postcode or Store Name</td>
+        <td width="7%" height="161"><img src="coffeeFrap.png" width="108%" height="135" alt=""/></td>
+        <td width="17%"> <p><strong>Coffee Frappuccino</strong></p>
+        <p>Medium Coffee</p>
+        <p>- 2 +</p></td>
+        <td width="12%">&nbsp;</td>
+        <td width="64%"><p>£3.50</p>
+        <p style="color: #5E78F4">2 x £1.75</p></td>
+      </tr>
+      <tr>
+        <td height="97"><img src="panini.png" width="587" height="429" alt=""/></td>
+        <td><p><strong>Ham and cheese Panini</strong></p>
+        <p>Small sandwich</p>
+        <p> -1+</p></td>
+        <td>&nbsp;</td>
+        <td><p>£2.30</p>
+        <p style="color: #5E78F4">1 x £2.30</p></td>
+      </tr>
+      <tr>
+        <td height="139"><img src="cake.png" width="371" height="531" alt=""/></td>
+        <td><p><strong>Tripple Chocolate Cake</strong></p>
+        <p>-1+</p></td>
+        <td>&nbsp;</td>
+        <td><p>£1.30</p>
+        <p style="color: #5E78F4">1 x £1.30</p></td>
       </tr>
     </tbody>
   </table>
-  <p>&nbsp;</p>
-  <div class="map-container">
-    <h2 style="text-align: center;">Find Us</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-
+<table width="200" border="0">
+    <tbody>
+      <tr>
+        <td width="36%">&nbsp;</td>
+        <td width="64%"><p>Subtotal: £ 7.10</p>
+          <p>Vat: £ 1.42</p>
+        <p><strong style="color: #5E78F4">Total:  £8.52</strong></p></td>
+      </tr>
+    </tbody>
+</table>
+<table width="75%" border="0">
+  <tbody>
+    <tr>
+      <td width="15%" height="91" bgcolor="#5E78F4" style="color: #FFFFFF; text-align: center;">Back to Menu</td>
+      <td width="5%">&nbsp;</td>
+      <td width="15%" bgcolor="#5E78F4" style="color: #FFFFFF; text-align: center;">Proceed to Checkout</td>
+      <td width="65%">&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   <footer>
     &copy; Brewtopia Design 2025 &nbsp; | &nbsp;
     <a href="#">Careers</a> |
