--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
 .map-container1 {        width: 95%;
         padding: 10px;
 }
+  a:link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+  a:visited {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+a:active {
+    text-decoration: none;
+    color: #FFFFFF;
+}
   </style>
 </head>
 
@@ -115,11 +131,11 @@
   <table width="81%" height="188" border="0">
     <tbody>
       <tr>
-        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong>Brewtopia</strong></td>
-        <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong>Home</strong></td>
-        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong>Menu</strong></td>
-        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong>Store Locator</strong> </td>
-        <td width="19%" bgcolor="#5E78F4" class="nav-button">Order</td>
+        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
+        <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
+        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/menu.html">Menu</a></strong></td>
+        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/menu">Store Locator</a></strong> </td>
+        <td width="19%" bgcolor="#5E78F4"><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html"><strong>Order</strong></a></td>
         <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
         <td width="10%">&nbsp;</td>
       </tr>
