--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ a:active {
       <tr>
         <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
         <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
-        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/menu.html">Menu</a></strong></td>
-        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/menu">Store Locator</a></strong> </td>
-        <td width="19%" bgcolor="#5E78F4"><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html"><strong>Order</strong></a></td>
+        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html">Menu</a></strong></td>
+        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Store Locator</a></strong></td>
+        <td width="19%" bgcolor="#5E78F4"><strong><a href="https://theluynx18.github.io/4FTC1344/menu.html">Order</a></strong></td>
         <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
         <td width="10%">&nbsp;</td>
       </tr>
@@ -150,7 +150,7 @@ a:active {
     <tbody>
       <tr>
         <td width="72%" height="78">&nbsp;</td>
-        <td width="28%" bgcolor="#5E78F4" style="color: #000000">Enter City, Postcode or Store Name</td>
+        <td width="28%" bgcolor="#5E78F4" style="color: #FFFFFF"><strong style="font-size: 18px">Enter City, Postcode or Store Name</strong></td>
       </tr>
     </tbody>
   </table>
