--- a/menu.html
+++ b/menu.html
@@ -107,6 +107,22 @@
 .map-container1 {        width: 95%;
         padding: 10px;
 }
+  a:link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+a:visited {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+a:hover {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+a:active {
+    color: #FFFFFF;
+    text-decoration: none;
+}
   </style>
 </head>
 
@@ -114,11 +130,11 @@
   <table width="81%" height="188" border="0">
     <tbody>
       <tr>
-        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Brewtopia</strong></td>
-        <td width="13%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFCFC">Home</strong></td>
-        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Menu</strong></td>
-        <td width="14%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFDFD">Store Locator</strong></td>
-        <td width="14%" bgcolor="#5E78F4" class="nav-button" style="text-align: left; color: #FFFFFF;"><strong>Order</strong></td>
+        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF; text-align: justify;"> <a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
+        <td width="13%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFCFC"><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
+        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html">Menu</a></strong></td>
+        <td width="14%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFDFD"><a href="https://theluynx18.github.io/4FTC1344/">Store Locator</a></strong></td>
+        <td width="14%" bgcolor="#5E78F4" class="nav-button" style="text-align: left; color: #FFFFFF;"><strong><a href="https://theluynx18.github.io/4FTC1344/menu.html">Order</a></strong></td>
         <td width="26%" bgcolor="#5E78F4" class="nav-button"><strong style="color: #FFFFFF">Contact Us</strong></td>
         <td width="10%" bgcolor="#5E78F4">&nbsp;</td>
       </tr>
