--- a/pagetwo.html
+++ b/pagetwo.html
@@ -99,6 +99,22 @@
         margin: 5px 0;
       }
     }
+  a:link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+a:active {
+    text-decoration: none;
+    color: #FFFFFF;
+}
   </style>
 </head>
 
@@ -106,11 +122,11 @@
 <table border="0">
     <tbody>
       <tr>
-        <td width="9%" height="242" bgcolor="#5E78F4" style="color: #FFFFFF"><strong>Brewtopia</strong></td>
-        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Home</strong></td>
-        <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB">Menu</strong></td>
-        <td width="32%" bgcolor="#5E78F4"><strong><span style="color: #FFFFFF">Store Locator</span></strong></td>
-        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Order</strong></td>
+        <td width="9%" height="242" bgcolor="#5E78F4" style="color: #FFFFFF"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
+        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
+        <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB"><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html">Menu</a></strong></td>
+        <td width="32%" bgcolor="#5E78F4"><strong><span style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/">Store Locator</a></span></strong></td>
+        <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/menu.html">Order</a></strong></td>
         <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
         <td width="15%"><img src="magnifying-glass-icon.jpg" width="1920" height="1920" alt=""/></td>
       </tr>
@@ -124,8 +140,8 @@
       <td colspan="3"><strong>Select Dlivery Option For your Order</strong></td>
     </tr>
     <tr>
-      <td width="31%" height="496"><img src="ubereat-logo.png" width="71%" height="225" alt=""/></td>
-      <td width="36%"><img src="dliveroo-logo.jpg" width="63%" height="305" alt=""/></td>
+      <td width="32%" height="496"><img src="old/ubereat-logo.png" width="71%" height="225" alt=""/></td>
+      <td width="35%"><img src="dliveroo-logo.jpg" width="63%" height="305" alt=""/></td>
       <td width="33%"><img src="just eatlogo.png" width="204" height="192" alt=""/></td>
     </tr>
   </tbody>
@@ -141,7 +157,7 @@
       <td width="13%" bgcolor="#5E78F4">Jhon</td>
       <td width="6%" bgcolor="#FFFFFF">&nbsp;</td>
       <td width="12%" bgcolor="#5E78F4">Smith</td>
-      <td bgcolor="#FFFFFF">l</td>
+      <td bgcolor="#FFFFFF">&nbsp;</td>
       <td bgcolor="#5E78F4">john.smith@gmail</td>
       <td width="3%">&nbsp;</td>
       <td width="30%" bgcolor="#5E78F4">+44 01279 123456</td>
