--- a/pagetwo.html
+++ b/pagetwo.html
@@ -140,7 +140,7 @@ a:active {
       <td colspan="3"><strong>Select Dlivery Option For your Order</strong></td>
     </tr>
     <tr>
-      <td width="32%" height="496"><img src="old/ubereat-logo.png" width="71%" height="225" alt=""/></td>
+      <td width="32%" height="496"><img src="ubereat-logo.png" width="71%" height="225" alt=""/></td>
       <td width="35%"><img src="dliveroo-logo.jpg" width="63%" height="305" alt=""/></td>
       <td width="33%"><img src="just eatlogo.png" width="204" height="192" alt=""/></td>
     </tr>
