--- a/pagetwo.html
+++ b/pagetwo.html
@@ -122,18 +122,16 @@ a:active {
 <table border="0">
     <tbody>
       <tr>
-        <td width="9%" height="242" bgcolor="#5E78F4" style="color: #FFFFFF"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
+        <td width="9%" height="165" bgcolor="#5E78F4" style="color: #FFFFFF"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
         <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
         <td width="17%" bgcolor="#5E78F4"><strong style="color: #FBFBFB"><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html">Menu</a></strong></td>
         <td width="32%" bgcolor="#5E78F4"><strong><span style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/">Store Locator</a></span></strong></td>
         <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF"><a href="https://theluynx18.github.io/4FTC1344/menu.html">Order</a></strong></td>
         <td width="9%" bgcolor="#5E78F4"><strong style="color: #FFFFFF">Contact Us</strong></td>
-        <td width="15%"><img src="magnifying-glass-icon.jpg" width="1920" height="1920" alt=""/></td>
+        <td width="15%">&nbsp;</td>
       </tr>
     </tbody>
 </table>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 <table width="200" border="0">
   <tbody>
     <tr>
