--- a/index.html
+++ b/index.html
@@ -1,171 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Brewtopia</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Don't Panic</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    .map-container {
-      width: 90%;
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 15px;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      background-color: #f9f9f9;
-    }
-
-    iframe {
-      width: 100%;
-      height: 450px;
-      border: none;
-      border-radius: 8px;
-    }
-
-    table {
-    width: 90%;
-    margin: auto;
-    border-collapse: collapse;
-    text-align: center;
-    color: #F9F9F9;
-    }
-
-    td img {
-      width: 100%;
-      height: auto;
-    }
-
-    footer {
-      width: 100%;
-      padding: 20px 0;
+      padding: 0;
+      background: black;
+      color: limegreen;
+      font-family: 'Courier New', Courier, monospace;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      flex-direction: column;
       text-align: center;
-      background-color: #333;
-      color: #fff;
-      font-size: 14px;
-      margin-top: 40px;
     }
-
-    footer a {
-      color: #ddd;
-      margin: 0 10px;
-      text-decoration: none;
+    h1 {
+      font-size: 4rem;
+      margin-bottom: 1rem;
     }
-
-    footer a:hover {
-      text-decoration: underline;
+    p {
+      font-size: 1.5rem;
+      max-width: 600px;
     }
-
-    @media (max-width: 768px) {
-      table, td {
-        display: block;
-        width: 100%;
-      }
-
-      td {
-        border-bottom: 1px solid #ccc;
-      }
-
-      .map-container {
-        width: 95%;
-        padding: 10px;
-      }
-
-      iframe {
-        height: 300px;
-      }
+    .glow {
+      text-shadow: 0 0 10px limegreen, 0 0 20px limegreen;
     }
-
-    @media (max-width: 480px) {
-      footer {
-        font-size: 12px;
-      }
-
-      footer a {
-        display: block;
-        margin: 5px 0;
-      }
+    .footer {
+      position: absolute;
+      bottom: 1rem;
+      font-size: 0.9rem;
+      color: gray;
     }
-  .map-container1 {      width: 90%;
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 15px;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      background-color: #f9f9f9;
-}
-.map-container1 {        width: 95%;
-        padding: 10px;
-}
-  a:link {
-    color: #FFFFFF;
-    text-decoration: none;
-}
-  a:visited {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-a:hover {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-a:active {
-    text-decoration: none;
-    color: #FFFFFF;
-}
   </style>
 </head>
-
 <body>
-  <table width="81%" height="188" border="0">
-    <tbody>
-      <tr>
-        <td width="11%" height="91" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Brewtopia</a></strong></td>
-        <td width="6%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Home</a></strong></td>
-        <td width="12%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/pagetwo.html">Menu</a></strong></td>
-        <td width="19%" bgcolor="#5E78F4" class="nav-button"><strong><a href="https://theluynx18.github.io/4FTC1344/">Store Locator</a></strong></td>
-        <td width="19%" bgcolor="#5E78F4"><strong><a href="https://theluynx18.github.io/4FTC1344/menu.html">Order</a></strong></td>
-        <td width="23%" bgcolor="#5E78F4" class="nav-button"><strong>Contact Us</strong></td>
-        <td width="10%">&nbsp;</td>
-      </tr>
-      <tr>
-        <td height="91" colspan="7" bgcolor="#FFFFFF" class="nav-button" style="font-size: 36px; color: #000000;">Find a Coffee Shop Near You</td>
-      </tr>
-    </tbody>
-  </table>
+  <h1 class="glow">Don't Panic</h1>
+  <p>The last page on the internet. Everything else has been archived, deleted, or forgotten. But this... this remains. A beacon of calm in a chaotic galaxy.</p>
+  <div class="footer">Inspired by the Hitchhiker's Guide to the Galaxy</div>
 
-  <p>&nbsp;</p>
-  <table width="80%" border="0">
-    <tbody>
-      <tr>
-        <td width="72%" height="78">&nbsp;</td>
-        <td width="28%" bgcolor="#5E78F4" style="color: #FFFFFF"><strong style="font-size: 18px">Enter City, Postcode or Store Name</strong></td>
-      </tr>
-    </tbody>
-  </table>
-  <p>&nbsp;</p>
-  <div class="map-container">
-    <h2 style="text-align: center;">Find Us</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3846853.3379014656!2d66.1763803722702!3d19.683111022508058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af07fd1678f9%3A0xa9a19160248e0308!2sBrewtopia!5e0!3m2!1sen!2suk!4v1744118936166!5m2!1sen!2suk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-
-  <footer>
-    &copy; Brewtopia Design 2025 &nbsp; | &nbsp;
-    <a href="#">Careers</a> |
-    <a href="#">About Us</a> |
-    <a href="#">F&A</a> |
-    <a href="#">T&C</a>
-  </footer>
+  <!--
+       .----.
+     _/     /\
+    ('--:--:--')
+    //   ||   \\
+   (|    ||    |)
+    \\__ || __//
+     '--''--'
+  YOU FOUND THE BACKDOOR.
+  STAY CURIOUS, CYBER EXPLORER.
+  -->
 </body>
 </html>
